fix: text and height to 100% in dark mode

--- a/src/assets/styles/helpers/_html.scss
+++ b/src/assets/styles/helpers/_html.scss
@@ -66,7 +66,7 @@ body {
 	}
 
 	&.dark {
-		background: $dark-gray;
+		background-color: $dark-gray;
 
 		button.chart-dates {
 			color: white;
@@ -112,7 +112,7 @@ body {
 }
 
 div#app {
-	min-height: 100%;
+	height: 100%;
 	background-color: #fafbfc;
 	background: linear-gradient(314.47deg, #EBEFF5 2.19%, #f7f9fc 100%);
 }
